<resources>
    <string name="app_name">Caculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="division">/</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equalto">=</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
</resources>
