<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dodger_blue"
    tools:context=".MainActivity">

   <EditText
       android:id="@+id/edit_text"
       android:layout_width="match_parent"
       android:textColor="@color/white"
       android:textSize="20sp"
       android:layout_height="350dp"
       android:layout_marginTop="8dp"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="8"
            android:layout_marginLeft="8dp">
            <Button
                android:id="@+id/button_one"
                android:onClick="operationFunction"
                android:text="@string/_1"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/button_two"
                android:layout_width="wrap_content"
                android:text="@string/_2"
                android:textSize="18sp"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/button_three"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:text="@string/_3"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/button_divide"
                android:onClick="operationFunction"
                android:background="@color/orange"
                android:text="@string/division"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="8"
            android:layout_marginLeft="8dp">
            <Button
                android:id="@+id/button_four"
                android:textSize="18sp"
                android:text="@string/_4"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/button_five"
                android:text="@string/_5"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/button_six"
                android:text="@string/_6"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/buttn_minus"
                android:onClick="operationFunction"
                android:background="@color/orange"
                android:text="@string/subtraction"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="8"
            android:layout_marginLeft="8dp">
            <Button
                android:id="@+id/button_seven"
                android:textSize="18sp"
                android:text="@string/_7"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/button_eight"
                android:textSize="18sp"
                android:text="@string/_8"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/button_nine"
                android:textSize="18sp"
                android:text="@string/_9"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/button_add"
                android:onClick="operationFunction"
                android:background="@color/orange"
                android:text="@string/addition"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:weightSum="8"
            android:layout_marginLeft="8dp">
            <Button
                android:id="@+id/button_clear"
                android:onClick="operationFunction"
                android:text="@string/c"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:text="@string/_0"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/button_decimal"
                android:onClick="operationFunction"
                android:text="@string/decimal"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"/>
            <Button
                android:onClick="operationFunction"
                android:id="@+id/button_equal"
                android:background="@color/orange"
                android:textSize="18sp"
                android:text="@string/equalto"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>